# atlas

./: .gitmodules  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  pages.yml
crates/atlas/: Cargo.toml
crates/atlas-algorithms/: Cargo.toml
crates/atlas-algorithms/src/: binary_search.rs  deduplicate.rs  filter.rs  insertion_sort.rs  is_sorted.rs  lib.rs  linear_search.rs  maximum.rs  merge_sort.rs  merge_sorted.rs  minimum.rs  partition.rs  reverse.rs
crates/atlas-bench/: Cargo.toml
crates/atlas-mir/: Cargo.toml  build.rs
crates/atlas-web-wasm/: Cargo.toml
crates/atlas-web-wasm/src/: astar.rs  lib.rs  rle.rs  union_find.rs
crates/atlas/examples/: build_web_projection.rs  cleanup_expected_time_generated.rs  cleanup_generated.rs  dataset_specs.rs  find_generated.rs  merge_sorted_generated.rs  partition_sort_generated.rs  pseudocode_ast.rs  record_partition_correction.rs  record_sort_correction.rs  semantic_traces.rs  unique_sort_generated.rs
crates/atlas/examples/support/: mod.rs
crates/atlas/pseudocode/: insertion_sort.atlas-pseudo  is_sorted.atlas-pseudo  minimum.atlas-pseudo  partition.atlas-pseudo  reverse.atlas-pseudo
crates/atlas/src/: ast.rs  comparisons.rs  composition.rs  datasets.rs  decision_equivalence.rs  decision_evaluator.rs  decision_overlay.rs  decision_projection.rs  executions.rs  expressions.rs  index.rs  lib.rs  main.rs  pseudocode.rs  registry.rs  schema02_migration.rs  traces.rs  visual_program.rs  web_projection.rs
crates/atlas/tests/: external_dynamic_structure_adapters.rs  external_graph_adapters.rs  external_streaming_adapters.rs  registry_validation.rs
doc/: Prompt_agent_Atlas_Executable.md  Vision_Atlas_Executable_MVP1-4.docx
docs/: agent-cli-selection.md  mir-integration.md  mvp-status.md  mvp1-corpus.md  mvp1-review.md  mvp2-review.md  mvp3-review.md  mvp4-review.md  mvp5-review.md  mvp5-web.md  mvp6-review.md  mvp6-visual-machine.md  performance-model-research.md  phase-demo.md  phase2-external-corpus.md  phase3-explorer.md  phase4-comparative-selection.md  phase5-consumer-projection.md  phase6-conditioned-cost-projection.md  phase7-second-family-conditioned-cost.md  phase8-qualified-time-design.md  phase9-schema02-dry-run.md  post-foundation-roadmap-proposal.md  progress.md  project-vocabulary-proposal.md  project-vocabulary.md  roadmap.md  schema-0.1.md  schema-0.2.md  sqlite-projection-v1.md  sqlite-projection-v2.md  vision.md
docs/audits/: 2026-07-14-external-project-audit.md
docs/decisions/: DEC-001-activate-mvp1.md  DEC-002-aggregate-yaml-schema.md  DEC-003-rust-serde-yaml.md  DEC-004-initial-cli.md  DEC-005-list-command.md  DEC-006-optional-domain-properties.md  DEC-007-show-command.md  DEC-008-algorithm-requirements.md  DEC-009-search-command.md  DEC-010-explain-command.md  DEC-011-mvp1-corpus.md  DEC-012-operational-implementations.md  DEC-013-expected-time-cost.md  DEC-014-no-std-algorithms.md  DEC-015-structured-algorithm-ast.md  DEC-016-separate-dataset-spec.md  DEC-017-minimal-semantic-traces.md  DEC-018-problem-requirements.md  DEC-019-hashbrown-no-std.md  DEC-020-markdown-vision-authority.md  DEC-021-complete-schema-0.1.md  DEC-022-system-sqlite-projection.md  (+53 more)
registry/: atlas.yaml
scripts/: apply-mir-patches.sh  build-web.sh  check-mir-rv64-generator.sh  check-mvp1.sh  check-mvp2.sh  check-rv64-lp64-abi.sh  check-web.sh  record-sort-comparison-linux.sh  run-benchmark-linux.sh
web/: app.js  catalog.mjs  generator.mjs  index.html  playback.mjs  styles.css
(+104 files in other folders)
