[workspace]
members = ["crates/atlas", "crates/atlas-algorithms", "crates/atlas-bench", "crates/atlas-mir"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
capstone = { version = "0.14.0", default-features = false, features = ["arch_x86", "full", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
rusqlite = { version = "0.40.1", default-features = false, features = ["libsqlite3-sys"] }
sha2 = "0.11.0"
