[workspace]
members = ["crates/atlas", "crates/atlas-algorithms", "crates/atlas-bench", "crates/atlas-mir", "crates/atlas-web-wasm"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
capstone = { version = "0.14.0", default-features = false, features = ["arch_x86", "full", "std"] }
petgraph = { version = "=0.8.3", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = { package = "serde_yaml_ng", version = "0.10.0" }
rusqlite = { version = "0.40.1", default-features = false, features = ["libsqlite3-sys"] }
sha2 = "0.11.0"
wasm-bindgen = "=0.2.100"
