[package]
name = "atlas-algorithms"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["alloc", "hash-dedup"]
alloc = []
hash-dedup = ["alloc", "dep:hashbrown"]

[dependencies]
hashbrown = { version = "0.17.1", optional = true, default-features = false, features = ["default-hasher"] }
