[package]
name = "atlas-web-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
atlas-algorithms = { path = "../atlas-algorithms", default-features = false }
petgraph.workspace = true
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
atlas = { path = "../atlas" }
