[package]
name = "atlas"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
rusqlite.workspace = true
sha2.workspace = true

[dev-dependencies]
atlas-algorithms = { path = "../atlas-algorithms" }
petgraph.workspace = true

[[bin]]
name = "atlas"
path = "src/main.rs"
